[package]
name = "sb_tools"
description = "Tool to read/write SmileBASIC files in the command line. (Currently only supports SB3 TXT/PRG files)"
version = "0.0.1"
authors = ["V360 <v360code@gmail.com>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9.0"
sha-1 = "0.9.8"
hmac = "0.11.0"
argh = "0.1.6"
# clap = "3.0.0-beta.4"
# notify = "4.0.16"
