[package]
name = "sb_file_toolkit"
description = "Tool to read/write SmileBASIC files in the command line. (Currently only supports SB3 TXT/PRG files)"
version = "0.0.1"
authors = ["V360 <v360code@gmail.com>"]
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha-1 = "0.9.8" # sb3 & sb4
hmac = "0.11.0" # sb3 & sb4
ucs2 = "0.3.2" # sb2 & sb4
log = "0.4" # pretty
simple_logger = { version = "1.13", default_features = false, features = ["stderr"] }
argh = "0.1.6" # cli

# maybe soon ...
# md-5 = "0.9.1" # sb2
# fatfs = "0.????" # sb2 (maybe overkill)
# notify = "4.0.16" # cli watch utility
# flate2 = "1.0.21" # sb3 zlib stuff

# ditched (because of) ...
# env_logger = "0.9.0" # footprint
# clap = "3.0.0-beta.4" # footprint
